Update user and university service
